--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-ckeditor==5.6.1
 django-compressor==2.2
 django-debug-toolbar==1.11
 django-environ==0.4.5
+django-extra-views==0.12.0
 django-js-asset==1.2.2
 django-storages==1.7.1
 django-toolbelt==0.0.1
