--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,15 @@ django-debug-toolbar==1.11
 django-environ==0.4.5
 django-extra-views==0.12.0
 django-js-asset==1.2.2
+django-markdown-deux==1.0.5
+django-markdownx==2.0.28
 django-storages==1.7.1
 django-toolbelt==0.0.1
 docutils==0.14
 gunicorn==19.9.0
 jmespath==0.9.4
+Markdown==3.1
+markdown2==2.3.7
 Pillow==6.0.0
 psycopg2==2.8.1
 python-dateutil==2.8.0
