--- a/requirements copy.txt
+++ b/requirements copy.txt
@@ -16,13 +16,13 @@ django-js-asset==1.2.2
 django-markdown-deux==1.0.5
 django-markdownx==2.0.28
 django-storages==1.7.1
+django-toolbelt==0.0.1
 docutils==0.14
 gunicorn==19.9.0
 jmespath==0.9.4
 Markdown==3.1
 markdown2==2.3.7
 Pillow==6.0.0
-psycopg2-binary==2.8.2
 python-dateutil==2.8.0
 pytz==2018.9
 rcssmin==1.0.6
