--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto==2.49.0
 boto3==1.9.130
 botocore==1.12.130
 Collectfast==0.6.2
+coverage==4.5.3
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.2
