--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-extra-views==0.12.0
 django-js-asset==1.2.2
 django-markdown-deux==1.0.5
 django-markdownx==2.0.28
+django-registration-redux==2.6
 django-storages==1.7.1
 docutils==0.14
 gunicorn==19.9.0
