--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,10 @@ django-js-asset==1.2.2
 django-markdown-deux==1.0.5
 django-markdownx==2.0.28
 django-registration-redux==2.6
+django-sendgrid-v5==0.8.0
 django-storages==1.7.1
 docutils==0.14
+future==0.17.1
 gunicorn==19.9.0
 jmespath==0.9.4
 Markdown==3.1
@@ -26,10 +28,12 @@ markdown2==2.3.7
 Pillow==6.0.0
 psycopg2-binary==2.8.2
 python-dateutil==2.8.0
+python-http-client==3.1.0
 pytz==2018.9
 rcssmin==1.0.6
 rjsmin==1.0.12
 s3transfer==0.2.0
+sendgrid==6.0.5
 six==1.12.0
 sqlparse==0.3.0
 static3==0.7.0
