--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,18 @@ django-registration-redux==2.6
 django-sendgrid-v5==0.8.0
 django-storages==1.7.1
 docutils==0.14
+entrypoints==0.3
+flake8==3.7.7
 future==0.17.1
 gunicorn==19.9.0
 jmespath==0.9.4
 Markdown==3.1
 markdown2==2.3.7
+mccabe==0.6.1
 Pillow==6.0.0
 psycopg2-binary==2.8.2
+pycodestyle==2.5.0
+pyflakes==2.1.1
 python-dateutil==2.8.0
 python-http-client==3.1.0
 pytz==2018.9
